--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -8,4 +8,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
+
+
